# Starting

./: .gitmodules  Cargo.toml  build.sh
Starting/: Build.sh  ConfigParse.cpp  Starting.hpp  StartingMain.c  StartingMain.cpp  build.doing
StartingPkg/: .gitignore  CMakeLists.txt  CMakeSettings.json  ConfigParse.cpp  StartingPkg.cpp  StartingPkg.dec  StartingPkg.dsc  StartingPkg.hpp  StartingPkg.inf
src/: main.rs  panic.rs
src/engine/: gop.rs  mod.rs
src/engine/cfg/: mod.rs
src/engine/fs/: disk.rs  fat32.rs  mod.rs
src/tool/: mod.rs
