[package]
name = "starting"
version = "0.1.0"
edition = "2018"
authors = ["GOSCPS Team <goscps@foxmail.com>"]

[profile.dev]
# 禁用栈展开
panic = "abort"

[profile.release]
# 同上
panic = "abort"

[dependencies]
uefi = "0.11.0"
uuid = { version = "0.8", default-features = false }

# 启用json解析器
serde = { version = "1.0", default-features = false, features = ["alloc","derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }